--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -31,5 +31,5 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Run tests
-      run: bundle exec rake
+    - name: Install
+      run: cd ruby/; bundle exec rake
