--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -19,12 +19,12 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby-version: ['2.7', '3.0']
+        ruby-version: ['3.0']
 
     steps:
     - uses: actions/checkout@v2
       with:
-        submodules: recursive
+        submodules: true
     - name: Set up Ruby
     # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
     # change this to (see https://github.com/ruby/setup-ruby#versioning):
@@ -34,4 +34,4 @@ jobs:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Install
-      run: cd ruby/; bundle install; bundle exec rake generate_visualization_json;
+      run: cd ruby/; bundle exec rake generate_visualization_json;
