--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -33,5 +33,6 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        working-directory: ./ruby
     - name: Install
       run: cd ruby/; bundle exec rake generate_visualization_json;
