--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -22,17 +22,16 @@ jobs:
         ruby-version: ['3.0']
 
     steps:
-    - uses: actions/checkout@v2
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v2
       with:
         submodules: true
-    - name: Set up Ruby
-    # To automatically get bug fixes and new Ruby versions for ruby/setup-ruby,
-    # change this to (see https://github.com/ruby/setup-ruby#versioning):
-    # uses: ruby/setup-ruby@v1
-      uses: ruby/setup-ruby@473e4d8fe5dd94ee328fdfca9f8c9c7afc9dae5e
+
+    - name: Use Ruby
+      uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+        ruby-version: ${{ matrix.ruby }}
+        bundler-cache: true
         working-directory: ./ruby
     - name: Install
       run: cd ruby/; bundle exec rake generate_visualization_json;
