--- a/.github/workflows/generate_json.yml
+++ b/.github/workflows/generate_json.yml
@@ -21,9 +21,6 @@ jobs:
   test:
 
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        ruby-version: ['3.0']
     env:
       BUNDLE_WITHOUT: "secryst:jsexec"
       SKIP_JS: "1"
@@ -36,7 +33,7 @@ jobs:
     - name: Use Ruby
       uses: ruby/setup-ruby@v1
       with:
-        ruby-version: ${{ matrix.ruby }}
+        ruby-version: 3.0
         bundler-cache: true
         working-directory: ./ruby
     - name: Install
